# attribute-boss

./: .gitignore  LICENSE  README.md  azure-pipelines.yml  pyproject.toml  requirements.build.txt  requirements.txt  setup.cfg  setup.py
AttributeBossPySpark.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: PyTools.py  SparkTools.py  __init__.py  extract_attributes.py  features.py  spark_setup.py  standardize_attributes.py  utils.py
src/AttributeBoss/: PyTools.py  SparkTools.py  utils.py
src/AttributeBoss.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/AttributeBossPySpark.egg-info/: PKG-INFO  SOURCES.txt
src/stz/: extract_attributes.py  standardize_attributes.py
test_/: test_extract_attributes.py  test_features.py  test_strandardize_attributes.py  test_utils.py
tests/: cfgtests_py.py  cfgtests_spark.py  conftests.py  conftests_py.py  test_PyTools.py  test_SparkTools.py  test_extract_attributes.py  test_features.py  test_standardize_attributes.py  testing_utils.py
