[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools>=67", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "AttributeBoss"
requires-python = ">=3.8"

# dependencies = ["pandas", "numpy", "regex"]
dynamic = ['version', 'description', 'dependencies', 'optional-dependencies']

authors = [{ name="BDRUMMOND", email="b3drumms@gmail.com" }]

readme = "README.md"
license = {file = "LICENSE"}

classifiers = ["Programming Language :: Python :: 3"]

# [project.optional-dependencies]
# tests = ["pytest"]

[project.urls]
Home = "https://dev.azure.com/gocloudclient0099/LPA/_git/AttributeBoss"