[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[project]
name = "AttributeBossPySpark"
requires-python = ">=3.8"

dynamic = ['version', 'description', 'dependencies', 'optional-dependencies', 'authors']

readme = "README.md"
license = {file = "LICENSE"}

classifiers = ["Programming Language :: Python :: 3"]