[metadata]
name = AttributeBoss
version = file: version
author = BDRUMMOND
author_email = b3drumms@gmail.com
description = A library that performs all the routine standardization tasks commonly required for downstream modelling on client-focused data. Designed to do the absolute bare minimum. Preprocessing before preprocessing. 
long_description = file: README.md
long_description_content_type = text/markdown
keywords = preprocessing, attributes, cleaning
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy
    pandas
    py4j
    pyspark>=3.4.0
    regex

[options.packages.find]
where=src

